--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@
 
 # theme                  : "minimal-mistakes-jekyll"
 # remote_theme           : "mmistakes/minimal-mistakes"
-minimal_mistakes_skin    : "neon" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
+minimal_mistakes_skin    : "dark" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
 
 # Site Settings
 locale                   : "en-US"
@@ -24,7 +24,7 @@ description              : "Here is my place to share my code and get some feeba
 url                      : "https://arashfeizpour.github.io/Python-Repository/" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : arashfeizpour/Python-Repository # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
-teaser                   : "assets/images/NIK_0021.JPG" # path of fallback teaser image, e.g. "/assets/images/500x300.png"
+teaser                   : "assets/images/NIK_0057b.jpg" # path of fallback teaser image, e.g. "/assets/images/500x300.png"
 logo                     : "https://raw.githubusercontent.com/arashfeizpour/arashfeizpour.github.io/master/images/LOGOWing2.png" # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
 masthead_title           : # overrides the website title displayed in the masthead, use " " for no title
 # breadcrumbs            : false # true, false (default)
